Robot Control Update